# skysnoop

./: .gitattributes  .gitignore  AGENTS.md  README.md  makefile  pyproject.toml
.github/prompts/: update-openapi-client.prompt.md
.github/workflows/: check-openapi-spec.yaml  pypi.yaml  pytest.yaml
adsblol/: cli.py  cli_formatters.py  exceptions.py
adsblol/client/: __init__.py  api.py  base.py  openapi.py  openapi_version.py
adsblol/conf/: settings.py
adsblol/models/: __init__.py  response.py
adsblol/models/openapi/: __init__.py  generated.py
adsblol/query/: __init__.py  builder.py  filters.py
docs/: README.md  advanced.md  cli-usage.md  filters.md  getting-started.md  skysnoop-client.md
docs/dev/: README.md  architecture.md  backend-protocol.md  cli.md  openapi-client.md  reapi-client.md  settings.md  skysnoop-client.md  testing.md
openspec/: project.md
openspec/changes/archive/2025-11-17-add-core-sdk-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-17-add-core-sdk-client/specs/aircraft-data-models/: spec.md
openspec/changes/archive/2025-11-17-add-core-sdk-client/specs/api-client/: spec.md
openspec/changes/archive/2025-11-18-add-openapi-client-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-27-rename-to-skysnoop/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-unified-client-abstraction/: design.md  proposal.md  tasks.md
openspec/specs/aircraft-data-models/: spec.md
openspec/specs/api-client/: spec.md
openspec/specs/cli-commands/: spec.md
openspec/specs/query-filtering/: spec.md
openspec/specs/unified-client/: spec.md
resources/: openapi_spec.json
skysnoop/: __init__.py  cli.py  cli_formatters.py  exceptions.py
skysnoop/client/: __init__.py  api.py  backend_selection.py  base.py  openapi.py  protocol.py  skysnoop.py
skysnoop/client/adapters/: __init__.py  openapi_adapter.py  reapi_adapter.py
skysnoop/conf/: settings.py
skysnoop/models/: __init__.py  aircraft.py  skydata.py
skysnoop/models/openapi/: __init__.py  generated.py
skysnoop/query/: __init__.py  builder.py
tests/: conftest.py  test_cli.py  test_cli.py.backup  test_cli_formatters.py  test_exceptions.py
tests/client/: test_api.py  test_backend_selection.py  test_base.py  test_openapi.py  test_openapi_adapter.py  test_openapi_adapter_simulation.py  test_protocol_compliance.py  test_reapi_adapter.py  test_skysnoop.py
tests/fixtures/: README.md  capture_fixtures.py
tests/fixtures/api_responses/: box_response.json  circle_multiple_aircraft.json  circle_single_aircraft.json  circle_zero_results.json  closest_response.json  find_callsign_multiple.json  find_hex_success.json  find_reg_response.json  find_type_response.json
tests/fixtures/openapi_responses/: v2_hex_single.json  v2_hex_zero_results.json  v2_mil_response.json  v2_pia_response.json  v2_point_response.json
tests/integration/: test_live_api.py  test_live_openapi.py  test_skysnoop_live.py
tests/models/: test_aircraft.py  test_openapi_models.py  test_response.py  test_skydata.py
tests/query/: test_builder.py  test_filters.py
(+8 files in other folders)
