[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
dependencies = [
  "httpx>=0.25.0",
  "pydantic~=2.0",
  "pydantic-settings",
  "rich",
  "typer",
]
description = ""
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "skysnoop"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "datamodel-code-generator[http]", # Generate Pydantic models from OpenAPI spec
  "glom",
  "mypy",
  "openapi-python-client", # Alternative option for full client generation
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "respx",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
]

[project.scripts]
skysnoop = "skysnoop.cli:app"

[tool.coverage.run]
concurrency = ["thread"]
omit = [
  "./skysnoop/_version.py",
  "./skysnoop/__init__.py",
  "./tests/*",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "live_api: marks tests that require access to the live adsb.lol re-api (feeder-only, deselect with '-m \"not live_api\"')",
  "live_openapi: marks tests that require access to the live adsb.lol OpenAPI (globally accessible, deselect with '-m \"not live_openapi\"')",
]

[tool.ruff]
exclude = [".venv", "./skysnoop/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
skysnoop = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "skysnoop/_version.py"
